--- a/index.html
+++ b/index.html
@@ -119,7 +119,20 @@
 
   <!-- Project Cards -->
   <div class="projects-grid" id="projectsContainer">
-    
+
+    <!-- Project 11 -->
+    <div class="project-card" data-category="auto" data-title="Courier Website" data-aos="zoom-in">
+      <img src="images/luxe-wear.jpeg" alt="Courier Website" />
+      <div class="project-info">
+        <h3>Luxe Wear</h3>
+        <p>Responsive and clean, fashion website.</p>
+        <div class="project-links">
+          <a href="projects/luxe-wear/index.html" target="_blank" class="btn">Live Demo</a>
+          <a href="projects/luxe-wear/index.zip" class="btn btn-outline" download>Download</a>
+          <button class="btn btn-outline open-modal" data-img="images/luxe-wear.jpeg">Preview</button>
+        </div>
+      </div>
+    </div>
     <!-- Project 10 -->
     <div class="project-card" data-category="auto" data-title="Courier Website" data-aos="zoom-in">
       <img src="images/car2.jpeg" alt="Courier Website" />
