Updated Home Hero Shop Button Linking to Collections Page

--- a/projects/luxe-wear/index.html
+++ b/projects/luxe-wear/index.html
@@ -36,7 +36,7 @@
     <div class="hero-text">
       <h2>Elevate Your Style</h2>
       <p>Discover premium fashion for the modern you.</p>
-      <a href="#" class="btn">Shop Now</a>
+      <a href="collections.html" class="btn">Shop Now</a>
     </div>
   </section>
 
