--- a/projects/luxe-wear/index.html
+++ b/projects/luxe-wear/index.html
@@ -86,6 +86,11 @@
     <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" alt="Chat on WhatsApp" />
   </a>
 
+  <!-- Floating Widget -->
+  <a href="https://mrkika.github.io/home/" class="floating-widget">
+    <img src="images/vvv.png" alt="Click Here">
+  </a>
+
   <footer>
     <div class="container">
       <p>&copy; 2025 LuxeWear. All rights reserved.</p>
