Zipped Auto Dealer v1 Files

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
         <h3>Auto Dealer v1</h3>
         <p>Responsive Auto Dealer Website with Floating WhatsApp Button</p>
         <div class="project-links">
-          <a href="#" target="_blank" class="btn">Live Demo</a>
-          <a href="projects/courier.zip" class="btn btn-outline" download>Download</a>
+          <a href="projects/auto-dealer-v1/index.html" target="_blank" class="btn">Live Demo</a>
+          <a href="projects/auto-dealer-v1/index.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/car2.jpeg">Preview</button>
         </div>
       </div>
