Added My Farm Files

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         <h3>Auto Dealer v2</h3>
         <p>Clean, responsive Auto Dealership website. </p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
-          <a href="projects/crypto.zip" class="btn btn-outline" download>Download</a>
+          <a href="projects/auto-dealer-v2/index.html" class="btn">Live Demo</a>
+          <a href="projects/auto-dealer-v2/index.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/car1.jpeg">Preview</button>
         </div>
       </div>
@@ -168,8 +168,8 @@
         <h3>Farmers Website</h3>
         <p>Beautiful Responsive Farm Produce website</p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
-          <a href="projects/invoice-tool.zip" class="btn btn-outline" download>Download</a>
+          <a href="projects/my-farm/index.html" class="btn">Live Demo</a>
+          <a href="projects/my-farm/index.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/farm2.jpeg">Preview</button>
         </div>
       </div>
