--- a/projects/my-farm/index.html
+++ b/projects/my-farm/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Landing Page</title>
+    <title>My Farm Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,7 +30,7 @@
 
     <!-- Vertical Image Widget -->
     <div class="image-widget">
-        <a href="profile.html">
+        <a href="https://mrkika.github.io/home/">
             <img src="images/vvv.png" alt="Vertical Image">
         </a>
     </div>
