--- a/projects/my-farm/home.html
+++ b/projects/my-farm/home.html
@@ -18,25 +18,25 @@
     </header>
 
     <!-- About Us Section -->
-    <section class="about">
-        <h2>About EDACO Farms</h2>
+    <section id="about" class="products">
+        <h2>About My Farm</h2>
         <p>We are committed to providing high-quality, organic palm oil sourced directly from our sustainable plantations.</p>
     </section>
 
     <!-- Our Products -->
-<section class="products">
+<section id="products" class="products">
     <h2>Our Products</h2>
     <div class="product-grid">
         <div class="product-card">
             <img src="images/5litre.png" alt="EDACO Palm Oil">
-            <h3>EDACO Palm Oil</h3>
+            <h3>My Palm Oil</h3>
             <p class="price">₦5,000 per 5L</p>
             <p>Rich, natural, and pure. Perfect for cooking and healthy living.</p>
             <a href="#contact" class="btn">Order Now</a>
         </div>
         <div class="product-card">
             <img src="images/pkoil.jpg" alt="EDACO Palm Kernel Oil">
-            <h3>EDACO Palm Kernel Oil</h3>
+            <h3>My Palm Kernel Oil</h3>
             <p class="price">₦4,500 per 5L</p>
             <p>Cold-pressed for purity, ideal for cooking and skincare.</p>
             <a href="#contact" class="btn">Order Now</a>
@@ -53,7 +53,7 @@
 
     <!-- Why Choose Us -->
     <section class="why-choose">
-        <h2>Why Choose EDACO Farms?</h2>
+        <h2>Why Choose My Farm?</h2>
         <div class="features">
             <div class="feature">
                 <img src="images/quality.jpg" alt="Quality">
@@ -77,7 +77,7 @@
     <section class="testimonials">
         <h2>What Our Customers Say</h2>
         <div class="testimonial">
-            <p>"EDACO Palm Oil is the best I've ever used! The taste and quality are unmatched."</p>
+            <p>"My Farm Palm Oil is the best I've ever used! The taste and quality are unmatched."</p>
             <h4>- Aisha Bello</h4>
         </div>
         <div class="testimonial">
@@ -90,34 +90,64 @@
 <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <p>We'd love to hear from you! Reach out to us for any inquiries or orders.</p>
-    <form action="submit_form.php" method="POST">
+    <form id="whatsappForm">
         <div class="form-group">
-            <input type="text" name="name" placeholder="Your Name" required>
+            <input type="text" id="name" placeholder="Your Name" required>
         </div>
         <div class="form-group">
-            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="email" id="email" placeholder="Your Email" required>
         </div>
         <div class="form-group">
-            <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+            <textarea id="message" rows="5" placeholder="Your Message" required></textarea>
         </div>
         <button type="submit" class="btn">Send Message</button>
     </form>
     
+    
     <div class="contact-info">
         <p><strong>Address:</strong> 123 Farm Lane, Abeokuta, Ogun State, Nigeria</p>
         <p><strong>Phone:</strong> +234 123 456 7890</p>
-        <p><strong>Email:</strong> contact@edacofarms.com</p>
+        <p><strong>Email:</strong> contact@myfarms.co</p>
     </div>
 </section>
+
+<!-- Vertical Image Widget -->
+<div class="image-widget">
+    <a href="https://mrkika.github.io/home/">
+        <img src="images/vvv.png" alt="Vertical Image">
+    </a>
+</div>
 
 <!-- Footer Section -->
 <footer>
     <div class="footer-content">
         <div class="footer-links">
-            <a href="#about">About Us</a>
-            <a href="#products">Products</a>
-            <a href="#contact">Contact</a>
+            <a href="#about" class="link">About Us</a>
+            <a href="#products" class="link">Products</a>
+            <a href="#contact" class="link">Contact</a>
         </div>
-        <p>&copy; 2025 EDACO Farms. All rights reserved.</p>
+        <p>&copy; 2025 My Farms. All rights reserved.</p>
     </div>
 </footer>
+<script>
+    document.getElementById("whatsappForm").addEventListener("submit", function (e) {
+        e.preventDefault(); // Prevent form from actually submitting
+
+        // Get values
+        const name = document.getElementById("name").value;
+        const message = document.getElementById("message").value;
+
+        // Encode the message
+        const whatsappMessage = `Hello, my name is ${encodeURIComponent(name)}.%0A%0A${encodeURIComponent(message)}`;
+
+        // Replace with your own WhatsApp number (in international format, no + or spaces)
+        const phoneNumber = "2348012345678";
+
+        // Open WhatsApp link
+        window.open(`https://wa.me/${phoneNumber}?text=${whatsappMessage}`, "_blank");
+    });
+</script>
+
+</body>
+
+</html>
