Added Target to Blank and Zipped for My Farm

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <h3>Auto Dealer v2</h3>
         <p>Clean, responsive Auto Dealership website. </p>
         <div class="project-links">
-          <a href="projects/auto-dealer-v2/index.html" class="btn">Live Demo</a>
+          <a href="projects/auto-dealer-v2/index.html" target="_blank" class="btn">Live Demo</a>
           <a href="projects/auto-dealer-v2/index.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/car1.jpeg">Preview</button>
         </div>
@@ -168,7 +168,7 @@
         <h3>Farmers Website</h3>
         <p>Beautiful Responsive Farm Produce website</p>
         <div class="project-links">
-          <a href="projects/my-farm/index.html" class="btn">Live Demo</a>
+          <a href="projects/my-farm/index.html" target="_blank" class="btn">Live Demo</a>
           <a href="projects/my-farm/index.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/farm2.jpeg">Preview</button>
         </div>
@@ -196,7 +196,7 @@
         <h3>My Car Site</h3>
         <p>Clean, responsive Auto website.</p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
+          <a href="#" target="_blank" class="btn">Live Demo</a>
           <a href="projects/crypto.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/car3.jpeg">Preview</button>
         </div>
@@ -210,7 +210,7 @@
         <h3>The Caterer</h3>
         <p>Simple Catering Services and Menu website. Clean and responsive.</p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
+          <a href="#" target="_blank" class="btn">Live Demo</a>
           <a href="projects/invoice-tool.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/caterer.jpeg">Preview</button>
         </div>
@@ -238,7 +238,7 @@
         <h3>Love Calculator</h3>
         <p>How much do you love her? Have fun with this JS App</p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
+          <a href="#" target="_blank" class="btn">Live Demo</a>
           <a href="projects/crypto.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/love-calculator.jpeg">Preview</button>
         </div>
@@ -252,7 +252,7 @@
         <h3>JS Fare Calculator</h3>
         <p>Simple calculator function</p>
         <div class="project-links">
-          <a href="#" class="btn">Live Demo</a>
+          <a href="#" target="_blank" class="btn">Live Demo</a>
           <a href="projects/invoice-tool.zip" class="btn btn-outline" download>Download</a>
           <button class="btn btn-outline open-modal" data-img="images/fare-calculator1.jpeg">Preview</button>
         </div>
