Add: Hon Chuky Template

--- a/index.html
+++ b/index.html
@@ -115,11 +115,25 @@
     <button class="filter-btn" data-filter="auto">Auto</button>
     <button class="filter-btn" data-filter="food">Food</button>
     <button class="filter-btn" data-filter="fashion">Fashion</button>
+    <button class="filter-btn" data-filter="politics">Political</button>
   </div>
 
   <!-- Project Cards -->
   <div class="projects-grid" id="projectsContainer">
 
+    <!-- Project 12 -->
+    <div class="project-card" data-category="politics" data-title="Political Website" data-aos="zoom-in">
+      <img src="images/hon-chuky.jpeg" alt="Political Website" />
+      <div class="project-info">
+        <h3>Hon Chuky Outreach</h3>
+        <p>Responsive and clean, political website.</p>
+        <div class="project-links">
+          <a href="projects/chukydandy/index.html" target="_blank" class="btn">Live Demo</a>
+          <a href="projects/chukydandy/index.zip" class="btn btn-outline" download>Download</a>
+          <button class="btn btn-outline open-modal" data-img="images/luxe-wear.jpeg">Preview</button>
+        </div>
+      </div>
+    </div>
     <!-- Project 11 -->
     <div class="project-card" data-category="fashion" data-title="Fashion Website" data-aos="zoom-in">
       <img src="images/luxe-wear.jpeg" alt="Fashion Website" />
