4 More Projects Added

--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
   <!-- Filter Menu -->
   <div class="filter-menu" data-aos="fade-up">
     <button class="filter-btn active" data-filter="all">All</button>
-    <button class="filter-btn" data-filter="frontend">Frontend</button>
-    <button class="filter-btn" data-filter="backend">Backend</button>
+    <button class="filter-btn" data-filter="sports">Sports</button>
+    <button class="filter-btn" data-filter="culture">Culture</button>
     <button class="filter-btn" data-filter="landing">Landing Page</button>
     <button class="filter-btn" data-filter="business">Business Website</button>
-    <button class="filter-btn" data-filter="python">Python</button>
+    <button class="filter-btn" data-filter="django">Django</button>
     <button class="filter-btn" data-filter="app">App</button>
     <button class="filter-btn" data-filter="agriculture">Agriculture</button>
     <button class="filter-btn" data-filter="auto">Auto</button>
@@ -121,6 +121,62 @@
   <!-- Project Cards -->
   <div class="projects-grid" id="projectsContainer">
 
+    <!-- Project 16 -->
+    <div class="project-card" data-category="django" data-title="Facts Engine" data-aos="zoom-in">
+        <img src="images/asknaija.jpeg" alt="Facts Engine Website" />
+        <div class="project-info">
+            <h3>AskNaija</h3>
+            <p>Responsive and clean, wesbsite built with Django and HTML</p>
+            <div class="project-links">
+                <a href="https://asknaija.onrender.com/" target="_blank" class="btn">View</a>
+                <a href="#" class="btn btn-outline" download>Download</a>
+                <button class="btn btn-outline open-modal" data-img="images/asknaija.jpeg">Preview</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project 15 -->
+    <div class="project-card" data-category="Sports" data-title="Soccer Player Website" data-aos="zoom-in">
+        <img src="images/baller1.jpeg" alt="Soccer Player Website" />
+        <div class="project-info">
+            <h3>Agba Baller</h3>
+            <p>Responsive and clean, Football Player Portfolio Website.</p>
+            <div class="project-links">
+                <a href="https://mrkika.github.io/joshuado/" target="_blank" class="btn">View</a>
+                <a href="#" class="btn btn-outline" download>Download</a>
+                <button class="btn btn-outline open-modal" data-img="images/baller1.jpeg">Preview</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project 14 -->
+    <div class="project-card" data-category="sports" data-title="Football Club Website" data-aos="zoom-in">
+        <img src="images/gfc.jpeg" alt="Sports Website" />
+        <div class="project-info">
+            <h3>Green Rangers FC</h3>
+            <p>Professional and Modern Soccer Club Website</p>
+            <div class="project-links">
+                <a href="https://mrkika.github.io/greenrangersfc/" target="_blank" class="btn">View</a>
+                <a href="#" class="btn btn-outline" download>Download</a>
+                <button class="btn btn-outline open-modal" data-img="images/gfc.jpeg">Preview</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Project 13 -->
+    <div class="project-card" data-category="culture" data-title="Cultural Website" data-aos="zoom-in">
+        <img src="images/kega.jpeg" alt="Cultural Website" />
+        <div class="project-info">
+            <h3>Kegites Club</h3>
+            <p>Book of Bookosis Website.</p>
+            <div class="project-links">
+                <a href="https://mrkika.github.io/kegites/" target="_blank" class="btn">View</a>
+                <a href="#" class="btn btn-outline" download>Download</a>
+                <button class="btn btn-outline open-modal" data-img="images/kega.jpeg">Preview</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Project 12 -->
     <div class="project-card" data-category="politics" data-title="Political Website" data-aos="zoom-in">
       <img src="images/hon-chuky.jpeg" alt="Political Website" />
@@ -130,7 +186,7 @@
         <div class="project-links">
           <a href="projects/chukydandy/index.html" target="_blank" class="btn">Live Demo</a>
           <a href="projects/chukydandy/index.zip" class="btn btn-outline" download>Download</a>
-          <button class="btn btn-outline open-modal" data-img="images/luxe-wear.jpeg">Preview</button>
+          <button class="btn btn-outline open-modal" data-img="images/chuky.jpeg">Preview</button>
         </div>
       </div>
     </div>
